# fusion-memory

./: .gitattributes  .gitignore  AGENTS.md  README.md  install.ps1  install.sh  pyproject.toml
deploy/: docker-compose.postgres.yml  fusion-memory.env.example  qwen_smoke.py
deploy/systemd/: fusion-memory-embedding@.service  fusion-memory-health.service  fusion-memory-health.timer  fusion-memory-history-sync@.service  fusion-memory-mcp.service  fusion-memory-reranker@.service
docs/: agent-adapters.md  beam-100k-final-evaluation-report-20260617.md  deployment-qwen-postgres.md  errors.md  fusion-memory-architecture.md  hybrid-agent-memory-beam-design.md  implementation-status.md  mem0-architecture-analysis.md  mempalace-architecture-analysis.md  quickstart.md  requirements.md  retrieval-engine-debeam-comparison-20260722.md  retrieval-heuristic-inventory-20260722.md
docs/alpha-beta/: README.md
fusion_memory/: __init__.py  agent_checks.py  agent_installer.py  alpha_beta.py  chronology_backfill.py  cli.py  dolphin_history_sync.py  health.py  mcp_auth.py  mcp_client.py  mcp_runtime.py  mcp_server.py  model_pool.py  model_server.py  product.py  server.py  windows_installer.py
fusion_memory/adapters/: __init__.py  dolphin_history_watcher.py  haitun_history_watcher.py
fusion_memory/api/: service.py  service_helpers.py  service_telemetry.py
fusion_memory/config/: default_taxonomy.json
fusion_memory/core/: auth.py  config.py  embedding.py  llm.py  models.py  runtime_config.py  text.py
fusion_memory/eval/: adapter.py  beam_adapter.py  longmemeval_adapter.py  model_adapters.py
fusion_memory/ingestion/: candidate_records.py  encoding_gate.py  entity_indexing.py  extractors.py  llm_extractor.py  normalizer.py  order_markers.py  temporal_normalizer.py  views.py  window_builder.py
fusion_memory/retrieval/: answer_requirements.py  candidate_provider.py  chronology_normalizer.py  chronology_selector.py  context.py  engine.py  event_chronology_graph.py  event_graph_selection.py  event_ordering_pack.py  evidence_pack.py  exact_answer_operators.py  mmr.py  pipeline.py  ports.py  product_engine.py  product_evidence_pack.py  product_planner.py  query_planner.py  raw_evidence_quota.py  reranker.py  retrieval_trace.py  rrf.py  rule_audit.py  rule_registry.py  scoring.py  selection.py  structured_annotations.py  (+8 more)
tests/: test_agent_checks.py  test_agent_installer.py  test_agent_runtime_smoke.py  test_alpha_beta.py  test_authorizer.py  test_beam_adapter.py  test_beam_event_ordering_replay.py  test_beam_pack_probe.py  test_beam_parallel_runner.py  test_beam_profile_regressions.py  test_beam_retrieval_replay.py  test_chronology_backfill.py  test_chronology_models_and_storage.py  test_chronology_normalizer.py  test_chronology_selector.py  test_cli_and_eval.py  test_config_and_reporting.py  test_docs_agent_adapters.py  test_dolphin_agent_example_sync.py  test_dolphin_history_sync.py  test_dolphin_history_watcher.py  test_event_ordering_graph.py  test_fusion_memory.py  test_haitun_history_watcher.py  test_health.py  test_hermes_integration.py  test_ingestion_write_helpers.py  test_llm_extractor_and_benchmark.py  test_longmemeval_adapter.py  test_mcp_auth.py  test_mcp_batch.py  test_mcp_scope.py  test_mcp_server.py  test_mcp_token_cli.py  test_mcp_tools.py  test_memory_service_retrieval_engine.py  test_model_adapters.py  test_model_pool.py  test_model_server.py  test_postgres_concurrency.py  (+34 more)
tools/: agent_runtime_smoke.py  backfill_chronology_graph.py  beam_event_ordering_replay.py  beam_pack_probe.py  beam_parallel_runner.py  beam_retrieval_replay.py  rule_audit.py
(+73 files in other folders)
