[project]
name = "fusion-memory"
version = "0.1.0"
description = "Local MVP implementation of Fusion Memory."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fusion-memory = "fusion_memory.cli:main"
fusion-memory-server = "fusion_memory.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "aiohttp>=3.9", "anyio>=4.0"]
postgres = ["psycopg2-binary>=2.9"]
qwen = [
  "sentence-transformers>=3.4",
  "torch>=2.5",
  "transformers>=4.51",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fusion_memory*"]

[tool.setuptools.data-files]
"models/Qwen3-Embedding-0.6B" = [
  "models/Qwen3-Embedding-0.6B/.gitattributes",
  "models/Qwen3-Embedding-0.6B/README.md",
  "models/Qwen3-Embedding-0.6B/config.json",
  "models/Qwen3-Embedding-0.6B/config_sentence_transformers.json",
  "models/Qwen3-Embedding-0.6B/generation_config.json",
  "models/Qwen3-Embedding-0.6B/merges.txt",
  "models/Qwen3-Embedding-0.6B/model.safetensors",
  "models/Qwen3-Embedding-0.6B/modules.json",
  "models/Qwen3-Embedding-0.6B/tokenizer.json",
  "models/Qwen3-Embedding-0.6B/tokenizer_config.json",
  "models/Qwen3-Embedding-0.6B/vocab.json",
]
"models/Qwen3-Embedding-0.6B/1_Pooling" = [
  "models/Qwen3-Embedding-0.6B/1_Pooling/config.json",
]
"models/Qwen3-Reranker-0.6B" = [
  "models/Qwen3-Reranker-0.6B/.gitattributes",
  "models/Qwen3-Reranker-0.6B/README.md",
  "models/Qwen3-Reranker-0.6B/chat_template.jinja",
  "models/Qwen3-Reranker-0.6B/config.json",
  "models/Qwen3-Reranker-0.6B/config_sentence_transformers.json",
  "models/Qwen3-Reranker-0.6B/generation_config.json",
  "models/Qwen3-Reranker-0.6B/merges.txt",
  "models/Qwen3-Reranker-0.6B/model.safetensors",
  "models/Qwen3-Reranker-0.6B/modules.json",
  "models/Qwen3-Reranker-0.6B/sentence_bert_config.json",
  "models/Qwen3-Reranker-0.6B/tokenizer.json",
  "models/Qwen3-Reranker-0.6B/tokenizer_config.json",
  "models/Qwen3-Reranker-0.6B/vocab.json",
]
"models/Qwen3-Reranker-0.6B/1_LogitScore" = [
  "models/Qwen3-Reranker-0.6B/1_LogitScore/config.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
